# Rakhsak

./: .gitignore  README.md  pyproject.toml  requirements.txt
flutter_dashboard/: README.md  pubspec.yaml  tmpclaude-13d0-cwd
flutter_dashboard/lib/: main.dart
flutter_dashboard/lib/services/: sentinel_service.dart
flutter_dashboard/lib/widgets/: ai_console.dart  dashboard_screen.dart  metrics_panel.dart  status_ring.dart  threat_list.dart
flutter_dashboard/test/: widget_test.dart
flutter_dashboard/windows/: CMakeLists.txt
flutter_dashboard/windows/runner/: Runner.rc  main.cpp
sentinel/: __init__.py  ai_brain.py  anomaly_sensor.py  behavioral_detector.py  code_scanner.py  download_model.py  hardware_detect.py  mock_threat.py  patch_engine.py  server.py
